# emacs-tramp-rpc

./: Cargo.toml  README.org  flake.nix
.github/workflows/: ci.yml  release.yml
lisp/: tramp-rpc-advice.el  tramp-rpc-deploy.el  tramp-rpc-process.el  tramp-rpc.el
server/: Cargo.toml
server/src/: main.rs
server/src/handlers/: io.rs  process.rs
