[workspace]
resolver = "2"
members = ["server"]

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Arthur Heymans <arthur@aheymans.xyz>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
serde_bytes = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs", "process", "sync", "time", "net"] }
futures = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[profile.release-debug]
inherits = "release"
opt-level = 3
strip = false
debug = true
