[package]
name = "tramp-rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RPC server for TRAMP remote file access"

[[bin]]
name = "tramp-rpc-server"
path = "src/main.rs"

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde_bytes.workspace = true
tokio.workspace = true
futures.workspace = true
flate2 = "1.0"

# For file operations
libc = "0.2"

# For PTY support (term feature includes pty module)
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }

# For filesystem watching (inotify on Linux, kqueue on macOS)
notify = "7.0"

[dev-dependencies]
tempfile = "3"
